import { createTreeWithEmptyWorkspace } from '@nrwl/devkit/testing';
import {
  readProjectConfiguration,
  Tree,
  updateProjectConfiguration,
} from '@nrwl/devkit';
import { updateConfigsJest29 } from './update-configs-jest-29';
import { libraryGenerator } from '@nrwl/workspace';

describe('Jest Migration - jest 29 update configs', () => {
  let tree: Tree;
  beforeEach(() => {
    tree = createTreeWithEmptyWorkspace();
  });
  it('should update jest.config.ts', async () => {
    await setup(tree, 'my-lib');

    await updateConfigsJest29(tree);

    const actualJestConfigTs = tree.read('libs/my-lib/jest.config.ts', 'utf-8');
    expect(actualJestConfigTs).toMatchSnapshot();
    const actualJestConfigJs = tree.read('libs/my-lib/jest.config.js', 'utf-8');
    expect(actualJestConfigJs).toMatchSnapshot();
  });

  it('should work with multiple projects + configs', async () => {
    await setup(tree, 'my-lib');
    await setup(tree, 'another-lib');
    await updateConfigsJest29(tree);

    const actualJestConfigTs1 = tree.read(
      'libs/my-lib/jest.config.ts',
      'utf-8'
    );
    expect(actualJestConfigTs1).toMatchSnapshot();
    const actualJestConfigJs1 = tree.read(
      'libs/my-lib/jest.config.js',
      'utf-8'
    );
    expect(actualJestConfigJs1).toMatchSnapshot();

    const actualJestConfigTs2 = tree.read(
      'libs/another-lib/jest.config.ts',
      'utf-8'
    );
    expect(actualJestConfigTs2).toMatchSnapshot();
    const actualJestConfigJs2 = tree.read(
      'libs/another-lib/jest.config.js',
      'utf-8'
    );
    expect(actualJestConfigJs2).toMatchSnapshot();
  });

  it('should work if not using ts-jest transformer', async () => {
    await setup(tree, 'no-ts-jest');
    tree.write(
      `libs/no-ts-jest/jest.config.ts`,
      `export default {
  transform: {
    '^.+\\\\.[tj]sx?$': 'babel-jest',
  },
  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html']
  displayName: 'jest',
  testEnvironment: 'node',
  preset: '../../jest.preset.js',
};`
    );
    tree.write(
      `libs/no-ts-jest/jest.config.js`,
      `module.exports = {
  transform: {
    '^.+\\\\.[tj]sx?$': 'babel-jest',
  },
  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html']
  displayName: 'jest',
  testEnvironment: 'node',
  preset: '../../jest.preset.js',
};`
    );

    await updateConfigsJest29(tree);
    const noTsJestConfigTs = tree.read(
      `libs/no-ts-jest/jest.config.ts`,
      'utf-8'
    );
    expect(noTsJestConfigTs).toMatchSnapshot();
    const noTsJestConfigJs = tree.read(
      `libs/no-ts-jest/jest.config.js`,
      'utf-8'
    );
    expect(noTsJestConfigJs).toMatchSnapshot();
  });

  it('should work snapshotFormat is defined', async () => {
    await setup(tree, 'no-ts-jest');
    tree.write(
      `libs/no-ts-jest/jest.config.ts`,
      `export default {
  transform: {
    '^.+\\\\.[tj]sx?$': 'babel-jest',
  },
  globals: {
      'ts-jest': { 
          tsconfig: '<rootDir>/tsconfig.spec.json' 
      },
      something: 'else',
      abc: [1234, true, {abc: 'yes'}]
  },
  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html']
  displayName: 'jest',
  testEnvironment: 'node',
  preset: '../../jest.preset.js',
  snapshotFormat: {escapeString: false, printBasicPrototype: true}
};`
    );
    tree.write(
      `libs/no-ts-jest/jest.config.js`,
      `module.exports = {
  transform: {
    '^.+\\\\.[tj]sx?$': 'ts-jest',
  },
  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html']
  displayName: 'jest',
  testEnvironment: 'node',
  preset: '../../jest.preset.js',
  globals: {
      'ts-jest': { 
          tsconfig: '<rootDir>/tsconfig.spec.json' 
      },
      something: 'else',
      abc: [1234, true, {abc: 'yes'}]
  },
  snapshotFormat: {escapeString: false, printBasicPrototype: true}
};`
    );

    await updateConfigsJest29(tree);
    const snapshotJestConfigTs = tree.read(
      'libs/no-ts-jest/jest.config.ts',
      'utf-8'
    );
    expect(snapshotJestConfigTs).toMatchSnapshot();
    const snapshotJestConfigJs = tree.read(
      `libs/no-ts-jest/jest.config.js`,
      'utf-8'
    );
    expect(snapshotJestConfigJs).toMatchSnapshot();
  });
  it('should be idempotent', async () => {
    await setup(tree, 'my-lib');

    await updateConfigsJest29(tree);

    const actualJestConfigTs1 = tree.read(
      'libs/my-lib/jest.config.ts',
      'utf-8'
    );
    expect(actualJestConfigTs1).toMatchSnapshot();
    const actualJestConfigJs1 = tree.read(
      'libs/my-lib/jest.config.js',
      'utf-8'
    );
    expect(actualJestConfigJs1).toMatchSnapshot();

    await updateConfigsJest29(tree);

    const actualJestConfigTs2 = tree.read(
      'libs/my-lib/jest.config.ts',
      'utf-8'
    );
    expect(actualJestConfigTs2).toEqual(actualJestConfigTs1);
    const actualJestConfigJs2 = tree.read(
      'libs/my-lib/jest.config.js',
      'utf-8'
    );
    expect(actualJestConfigJs2).toEqual(actualJestConfigJs1);
  });
});

async function setup(tree: Tree, name: string) {
  await libraryGenerator(tree, {
    name,
  });
  const projectConfig = readProjectConfiguration(tree, name);
  projectConfig.targets['test'] = {
    ...projectConfig.targets['test'],
    configurations: {
      ci: {
        ci: true,
      },
      other: {
        jestConfig: `libs/${name}/jest.config.js`,
      },
    },
  };

  updateProjectConfiguration(tree, name, projectConfig);

  tree.write(
    `libs/${name}/jest.config.js`,
    `module.exports = {
transform: {
  '^.+\\\\.[tj]sx?$': 'ts-jest'
},
// I am a comment and shouldn't be removed
moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html'],
globals: { 
    'ts-jest': {
        tsconfig: '<rootDir>/tsconfig.spec.json' 
    },
    something: 'else',
    abc: [1234, true, {abc: 'yes'}]
  },
/**
 * Multi-line comment shouldn't be removed
 */
displayName: 'jest',
testEnvironment: 'node',
preset: '../../jest.preset.js'
};
`
  );
}
